--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- 背景画像 下記サイトおすすめです HTML 背景画像パターンとかでも出てくる-->
 <!-- http://www.dinpattern.com/ 派手なものがおおい-->
 <!-- https://www.toptal.com/designers/subtlepatterns/  ここかわいい感じ-->
-<body background="https://gazo.serverbackup.repl.co/img.png" style="background-size:100%;background-repeat: no-repeat; background-size:cover;">
+<body background="darkness.png" style="background-size:100%;background-repeat: no-repeat; background-size:cover;">
     <div class="container" style="max-width: 600px;">
         <div class="row h-100 align-items-center">
             <div class="col">
