--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                           $(function (){
                             $.ajax({
                               url: 'http://133.18.228.169:8884/call_data',
-                              type: 'POST',
-                              dataType: 'json',
+                              type: 'GET',
+                              dataType: 'text',
                               data: payload
                             })
                         })</script>
