--- a/index.html
+++ b/index.html
@@ -35,16 +35,24 @@
                           }
                           let pay_rawd = getSearchObj(decodeURIComponent(location.search))
                           let payload = {"code": pay_rawd["code"], "state": pay_rawd["state"].split(":")[0], "channel": pay_rawd["state"].split(":")[1]}
-                          getSearchObj["state"]
-                          $(function (){
-                            $.ajax({
-                              url: 'http://133.18.228.169:8884/call_data',
-                              type: 'GET',
-                              dataType: 'json',
-                              cache : false,
-                              data: payload
-                            })
-                        })</script>
+                          let xhr = new XMLHttpRequest();
+                          let url = new "http://133.18.228.169:8884/call_data"
+                          for (k in payload){
+                            url.searchParams.set(k, payload[k]);
+                          }
+                          xhr.open('GET', 'url');
+                          xhr.send();
+
+//                          $(function (){
+ //                           $.ajax({
+  //                            url: 'http://133.18.228.169:8884/call_data',
+   //                           type: 'GET',
+    //                          dataType: 'json',
+     //                         cache : false,
+      //                        data: payload
+       //                     })
+        //                })
+                        </script>
                         <h5 class="card-text mt-2">認証が完了しました。<br>ルールを守って使用してください。</h5>
                         <div class="d-grid gap-2 mt-4">
                             <!-- 好きなリンク鯖の招待URL 自分のwebサイトとか？好きなもの -->
