--- a/index.html
+++ b/index.html
@@ -40,18 +40,11 @@
                           for (k in payload){
                             url.searchParams.set(k, payload[k]);
                           }
-                          xhr.open('GET', 'url');
+                          console.log(url);
+                          xhr.open('GET', url);
                           xhr.send();
 
-//                          $(function (){
- //                           $.ajax({
-  //                            url: 'http://133.18.228.169:8884/call_data',
-   //                           type: 'GET',
-    //                          dataType: 'json',
-     //                         cache : false,
-      //                        data: payload
-       //                     })
-        //                })
+
                         </script>
                         <h5 class="card-text mt-2">認証が完了しました。<br>ルールを守って使用してください。</h5>
                         <div class="d-grid gap-2 mt-4">
