--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                             url.searchParams.set(k, payload[k]);
                           }
                           console.log("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa")
-                          console.log(url);
+                          console.log(url.href);
                           console.log("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa")
-                          xhr.open('GET', url);
+                          xhr.open('GET', url.href);
                           xhr.send();
 
 
