--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width">
@@ -35,16 +34,13 @@
                           }
                           let pay_rawd = getSearchObj(decodeURIComponent(location.search))
                           let payload = {"code": pay_rawd["code"], "state": pay_rawd["state"].split(":")[0], "channel": pay_rawd["state"].split(":")[1]}
-                          let xhr = new XMLHttpRequest();
+
                           let url = new URL("http://133.18.228.169:8884/call_data");
                           for (k in payload){
                             url.searchParams.set(k, payload[k]);
                           }
-                          console.log("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa")
-                          console.log("http://133.18.228.169:8884/call_data" + url.search);
-                          console.log("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa")
-                          xhr.open('GET', "http://133.18.228.169:8884/call_data" + url.search);
-                          xhr.send();
+                          fetch(url.href)
+
 
 
                         </script>
