--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                                 return acc;
                               }, {});
                           }
+                            function get_func(url) {
+                          fetch(url)
+                          .then(function(response) {
+                        return response.text();
+                          })}
                           let pay_rawd = getSearchObj(decodeURIComponent(location.search))
                           let payload = {"code": pay_rawd["code"], "state": pay_rawd["state"].split(":")[0], "channel": pay_rawd["state"].split(":")[1]}
 
@@ -39,7 +44,7 @@
                           for (k in payload){
                             url.searchParams.set(k, payload[k]);
                           }
-                          fetch(url.href)
+                          get_func(url.href)
 
 
 
